[package]
name = "kalam-link"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly-compatible KalamDB client library"
keywords = ["kalamdb", "database", "client", "websocket", "wasm"]
categories = ["database", "web-programming::websocket", "wasm"]

[dependencies]
# Async runtime (native only)
tokio = { workspace = true, optional = true }

# HTTP client (native only)
reqwest = { workspace = true, optional = true }

# WebSocket (native only)
tokio-tungstenite = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Byte buffers for upload streaming
bytes = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }

# HTTP Basic Auth encoding
base64 = { workspace = true }

# Date/time handling for timestamp formatting
chrono = { workspace = true }

# Random number generation for WASM
getrandom = { version = "0.2", optional = true, features = ["js"] }

# Futures utilities
futures-util = { workspace = true, default-features = false }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Decompression (pure Rust, WASM-compatible)
miniz_oxide = { workspace = true }

# WASM bindings (T039, T040, T063A-T063B)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "console",
    # WebSocket support (T063A-T063B)
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "Blob",
    "FileReader",
    # Fetch API support (T063F-T063H)
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
], optional = true }

[features]
# Default to tokio-runtime for native builds
# WASM builds use wasm-pack which doesn't use default features
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "reqwest", "tokio-tungstenite"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "getrandom"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
kalamdb-configs = { workspace = true }
kalamdb-server = { workspace = true }
tempfile = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disable wasm-opt to avoid bulk memory operation issues
