[package]
name = "kalam-pg-extension"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[lib]
name = "pg_kalam"
crate-type = ["cdylib", "lib"]
doctest = false

[[bin]]
name = "pgrx_embed_pg_kalam"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
kalam-pg-api = { path = "crates/kalam-pg-api" }
kalam-pg-client = { path = "crates/kalam-pg-client" }
kalam-pg-common = { path = "crates/kalam-pg-common" }
kalam-pg-fdw = { path = "crates/kalam-pg-fdw" }
kalamdb-commons = { workspace = true }
once_cell = { workspace = true }
pgrx = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
kalamdb-commons = { workspace = true }
ntest = { workspace = true }
kalam-pg-api = { path = "crates/kalam-pg-api" }
kalam-pg-client = { path = "crates/kalam-pg-client" }
kalam-pg-common = { path = "crates/kalam-pg-common" }
kalam-pg-fdw = { path = "crates/kalam-pg-fdw" }
