[package]
name = "kalam-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive command-line client for KalamDB"
keywords = ["kalamdb", "database", "cli", "terminal"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "kalam"
path = "src/main.rs"

[dependencies]
# KalamDB connectivity
kalam-link = { path = "../kalam-link" }

# CLI argument parsing
clap = { workspace = true }

# Readline interface
rustyline = { workspace = true }

# Table formatting
tabled = { workspace = true }

# Terminal control
crossterm = { workspace = true }

# Config file parsing
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Home directory detection
dirs = "5.0"

# Date/time formatting
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
reqwest = { workspace = true }
