[package]
name = "kalam-link"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly-compatible KalamDB client library"
keywords = ["kalamdb", "database", "client", "websocket", "wasm"]
categories = ["database", "web-programming::websocket", "wasm"]

[dependencies]
# Async runtime
tokio = { workspace = true, optional = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Futures utilities
futures-util = { version = "0.3", default-features = false }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
wasm = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lib]
crate-type = ["cdylib", "rlib"]
