[package]
name = "kalamdb-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-sql = { path = "../kalamdb-sql" }

# Apache Arrow
arrow.workspace = true

# Web framework
actix-web.workspace = true
actix-rt.workspace = true
actix-web-actors.workspace = true
actix.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID generation
uuid.workspace = true

# JWT authentication
jsonwebtoken.workspace = true

# Time handling
chrono.workspace = true

# Logging
log.workspace = true

# Async runtime
tokio.workspace = true

[dev-dependencies]
# Testing utilities
actix-rt = { workspace = true }
tempfile = "3"
