[package]
name = "kalamdb-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-auth = { path = "../kalamdb-auth" }
kalamdb-system = { path = "../kalamdb-system" }

# Apache Arrow
arrow = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-ws = { workspace = true }
actix-files = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true }

# JWT authentication
jsonwebtoken = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Base64 encoding/decoding
base64 = { workspace = true }

# Compression
flate2 = { workspace = true }

# Embedded UI assets
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# Concurrency
dashmap = { workspace = true }
moka = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = { workspace = true }
kalamdb-store = { path = "../kalamdb-store" }
actix-rt = { workspace = true }
