[package]
name = "kalamdb-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Password hashing
bcrypt = "0.15"

# Encoding/decoding
base64 = "0.21"

# JWT validation
jsonwebtoken = "9.2"

# Internal dependencies
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-sql = { path = "../kalamdb-sql" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Time handling
chrono = "0.4"
