[package]
name = "kalamdb-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Password hashing
bcrypt = { workspace = true }

# Encoding/decoding
base64 = { workspace = true }

# JWT validation
jsonwebtoken = { workspace = true }

# Internal dependencies
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-sql = { path = "../kalamdb-sql" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }
