[package]
name = "kalamdb-commons"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["KalamDB Team"]
license = "MIT OR Apache-2.0"
description = "Shared types, constants, and utilities for KalamDB"
keywords = ["kalamdb", "database", "types"]
categories = ["database"]

[dependencies]
# workspace deps
dashmap = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
num_cpus = { workspace = true }
sqlparser = { workspace = true }
datafusion = { workspace = true, optional = true }
# Optional dependencies - only enabled via features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }

[features]
# Feature to enable serde support for serialization
serde = [
	"dep:serde",
	"dep:serde_json",
	"dep:arrow",
	"dep:arrow-schema",
	"dep:bincode",
	"dep:chrono",
]
# Full feature set including datafusion (for server use)
full = ["serde", "dep:datafusion"]
# WASM-compatible subset (no datafusion but has serialization)
wasm = ["serde"]
default = ["full"]

[lib]
name = "kalamdb_commons"
path = "src/lib.rs"
