[package]
name = "kalamdb-commons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, constants, and utilities for KalamDB"
keywords = ["kalamdb", "database", "types"]
categories = ["database"]

[dependencies]
# workspace deps
dashmap = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
num_cpus = { workspace = true }
datafusion = { workspace = true, optional = true }
parking_lot = { workspace = true }
# Optional dependencies - only enabled via features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
openraft = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
# Feature to enable serde support for serialization
serde = [
	"dep:serde",
	"dep:serde_json",
	"dep:arrow",
	"dep:arrow-schema",
	"dep:bincode",
	"dep:chrono",
	"dep:openraft",
	"dep:uuid",
	"dep:log",
]
# Full feature set including datafusion (for server use)
full = ["serde", "dep:datafusion"]
# WASM-compatible subset (no datafusion but has serialization)
wasm = ["serde"]
default = ["full"]

[lib]
name = "kalamdb_commons"
path = "src/lib.rs"
