[package]
name = "kalamdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Storage
rocksdb.workspace = true

# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-store = { path = "../kalamdb-store" }

# Apache Arrow ecosystem
arrow.workspace = true
datafusion.workspace = true

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time handling
chrono.workspace = true

# Logging
log.workspace = true

# Metrics
metrics = "0.22"

# UUID generation
uuid.workspace = true

# Single-assignment statics
once_cell = "1.19"

# Regular expressions
regex = "1.10"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }
