[package]
name = "kalamdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-auth = { path = "../kalamdb-auth" }

# Apache Arrow ecosystem
arrow = { workspace = true }
datafusion = { workspace = true }

# SQL parsing (for native DML handlers)
sqlparser = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true } # For system table serialization (faster than JSON)

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }

# System monitoring
sysinfo = { workspace = true }

# Metrics
metrics = { workspace = true }

# UUID generation
uuid = { workspace = true }

# ULID generation
ulid = { workspace = true }

# Password hashing
bcrypt = { workspace = true }

# Single-assignment statics
once_cell = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Binary encoding helpers
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rocksdb = { workspace = true }
