[package]
name = "kalamdb-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
# Internal crates (minimal dependencies)
kalamdb-commons = { path = "../kalamdb-commons" }

# System monitoring
sysinfo = { workspace = true }
num_cpus = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[lib]
doctest = false

[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }
