[package]
name = "kalamdb-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
# System monitoring
sysinfo = { workspace = true }
num_cpus = { workspace = true }

# Logging
log = { workspace = true }

[lib]
doctest = false

[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }
