[package]
name = "kalamdb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core library
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-api = { path = "../kalamdb-api" }

# Async runtime
tokio.workspace = true

# Web framework
actix-web.workspace = true
actix-rt.workspace = true

# Configuration
toml.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true
colored = "3.0.0"
fern = "0.7.1"

# Time handling
chrono.workspace = true

# Serialization
serde.workspace = true

# Error handling
anyhow.workspace = true

# System
num_cpus.workspace = true

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_message_storage"
path = "../../tests/integration/test_message_storage.rs"

[[test]]
name = "test_api_messages"
path = "../../tests/integration/test_api_messages.rs"

[[test]]
name = "test_query_messages"
path = "../../tests/integration/test_query_messages.rs"

[[test]]
name = "test_api_query"
path = "../../tests/integration/test_api_query.rs"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
