[package]
name = "kalamdb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core library
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-api = { path = "../kalamdb-api" }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-store = { path = "../kalamdb-store" }

# DataFusion for system schema registration
datafusion.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
actix-web.workspace = true
actix-cors.workspace = true

# Configuration
toml.workspace = true

# JWT authentication
jsonwebtoken = "9.2"

# Logging
log.workspace = true
env_logger.workspace = true
colored = "3.0.0"
fern = "0.7.1"

# Time handling
chrono.workspace = true

# Serialization
serde.workspace = true

# Error handling
anyhow.workspace = true

# System
num_cpus.workspace = true

[[bin]]
name = "kalamdb-server"
path = "src/main.rs"

[[test]]
name = "test_shared_tables"
path = "../../tests/integration/test_shared_tables.rs"

[[test]]
name = "test_user_tables"
path = "../../tests/integration/test_user_tables.rs"

[[test]]
name = "test_stream_tables"
path = "../../tests/integration/test_stream_tables.rs"

[[test]]
name = "test_quickstart"
path = "../../tests/integration/test_quickstart.rs"

[[test]]
name = "test_system_tables"
path = "../../tests/integration/test_system_tables.rs"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
actix-http = "3.4"
