[package]
name = "kalamdb-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }

# Database
rocksdb = { workspace = true }
arrow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# SQL parsing
sqlparser = { workspace = true }
regex = "1.11"
once_cell = "1.21"

# Error handling
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation for API keys
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tempfile = "3.23"
