[package]
name = "kalamdb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-store = { path = "../kalamdb-store" }

# Database
arrow = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# SQL parsing
sqlparser = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation for API keys
uuid = { workspace = true }

[dev-dependencies]
# Testing
tempfile = { workspace = true }
