[package]
name = "kalamdb-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-session = { path = "../kalamdb-session" }
kalamdb-system = { path = "../kalamdb-system" }

# Database
arrow = { workspace = true }
moka = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SQL parsing
sqlparser = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
# Testing
tempfile = { workspace = true }
