[package]
name = "kalamdb-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons" }

rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
serde_json = "1.0"
chrono = "0.4.39"
anyhow = "1.0"
tempfile = "3.8"

# T171a: S3 storage backend support
# NOTE: Commented out until cmake build dependency is available
# aws-sdk-s3 = "1.52"
# aws-config = "1.5"
# tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
path = "../../benches/performance.rs"
