[package]
name = "kalamdb-store"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }

rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }

# T171a: S3 storage backend support
# NOTE: Commented out until cmake build dependency is available
# aws-sdk-s3 = "1.52"
# aws-config = "1.5"
# tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
