[package]
name = "kalamdb-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
datafusion = ["dep:datafusion"]

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde", "full"] }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-sharding = { path = "../kalamdb-sharding", features = ["serde"] }

rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }

# Optional: DataFusion integration for filter pushdown
datafusion = { workspace = true, optional = true }

# T171a: S3 storage backend support
# NOTE: Commented out until cmake build dependency is available
# aws-sdk-s3 = "1.52"
# aws-config = "1.5"
# tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
kalamdb-system = { path = "../kalamdb-system" }
