[package]
name = "kalamdb-streams"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stream storage and commit log utilities for KalamDB"
keywords = ["kalamdb", "stream", "log", "commitlog"]
categories = ["database"]

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["full"] }
kalamdb-sharding = { path = "../kalamdb-sharding" }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[lib]
name = "kalamdb_streams"
path = "src/lib.rs"

[dev-dependencies]
datafusion = { workspace = true }
