[package]
name = "kalamdb-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "System table providers and metadata management for KalamDB"
keywords = ["kalamdb", "database", "system-tables", "metadata"]
categories = ["database"]

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-store = { path = "../kalamdb-store", features = ["datafusion"] }
kalamdb-raft = { path = "../kalamdb-raft" }

# Apache Arrow ecosystem
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }

# UUID generation
uuid = { workspace = true }

[lib]
name = "kalamdb_system"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
tempfile = { workspace = true }
