[package]
name = "kalam-pg-api"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
serde = { workspace = true }
kalamdb-commons = { workspace = true }
kalam-pg-common = { path = "../kalam-pg-common" }

